--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^3.4.1",
+    "date-holidays": "^1.6.2",
     "moment": "^2.27.0",
+    "moment-holiday": "^1.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
